Restore alphabetical order